homework_2_kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-simple-service
spec:
  selector:
    app: nodejs-simple-service
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
