homework_2_kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-simple-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: nodejs-simple-service
      port:
        number: 80
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: nodejs-simple-service
                port:
                  number: 80
          - path: /otusapp/{studentname}(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: nodejs-simple-service
                port:
                  number: 80
