homework_2_kubernetes/nodejs-simple-kube.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-simple-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-simple-service
  template:
    metadata:
      labels:
        app: nodejs-simple-service
    spec:
      containers:
        - name: nodejs-simple-service
          image: playbackdev/nodejs-simple-service
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
...
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-simple-service
spec:
  selector:
    app: nodejs-simple-service
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
...
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-simple-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: nodejs-simple-service
                port:
                  number: 80
                  name: http
          - path: /otusapp/{studentname}(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: nodejs-simple-service
                port:
                  number: 80
                  name: http
...
